--- a/randtalkbot/locale/es/LC_MESSAGES/randtalkbot.po
+++ b/randtalkbot/locale/es/LC_MESSAGES/randtalkbot.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: randtalkbot\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-03-12 22:40+0300\n"
+"POT-Creation-Date: 2016-03-13 07:10+0300\n"
 "PO-Revision-Date: 2016-03-07 19:08+0100\n"
-"Last-Translator: Benedetta Facchinetti <zoidberglupin@gmail.com>\n"
+"Last-Translator: Martin Ligabue <martinligabue@gmail.com>\n"
 "Language-Team: Spanish\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
