--- a/randtalkbot/locale/it/LC_MESSAGES/randtalkbot.po
+++ b/randtalkbot/locale/it/LC_MESSAGES/randtalkbot.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: randtalkbot\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-03-12 22:40+0300\n"
+"POT-Creation-Date: 2016-03-13 07:10+0300\n"
 "PO-Revision-Date: 2016-02-25 23:50+0100\n"
-"Last-Translator: Benedetta Facchinetti <zoidberglupin@gmail.com>\n"
+"Last-Translator: Martin Ligabue <martinligabue@gmail.com>\n"
 "Language-Team: Italian\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
@@ -210,8 +210,8 @@ msgstr ""
 "se vuoi cambiare persona, chiudi la chat usando /end e cerca un'altra "
 "persona. Per modificare le impostazioni puoi utilizzare /setup.\n"
 "\n"
-"Se hai suggerimenti o hai bisogno di aiuto scrivi pure all'admin del bot, "
-"@quasiyoke. Nel messaggio, per favore, includi questo numero: {0}.\n"
+"Se hai suggerimenti o hai bisogno di aiuto scrivi pure all'admin (inglese) "
+"del bot, @quasiyoke. Nel messaggio, per favore, includi questo numero: {0}.\n"
 "\n"
 "Iscriviti alle [nostre notizie (en)](https://telegram.me/RandTalk). Sei il "
 "benvenuto per controllare e migliorare il [codice sorgente del Rand Talk v. "
