https://telegram.me/RandTalk -> https://telegram.me/RandTalkChannel

--- a/randtalkbot/locale/es/LC_MESSAGES/randtalkbot.po
+++ b/randtalkbot/locale/es/LC_MESSAGES/randtalkbot.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: randtalkbot\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-03-16 10:52+0300\n"
+"POT-Creation-Date: 2016-03-16 11:30+0300\n"
 "PO-Revision-Date: 2016-03-07 19:08+0100\n"
 "Last-Translator: Martin Ligabue <martinligabue@gmail.com>\n"
 "Language-Team: Spanish\n"
@@ -202,8 +202,8 @@ msgid ""
 "If you have any suggestions or require help, please contact @quasiyoke. When "
 "asking questions, please provide this number: {0}.\n"
 "\n"
-"Subscribe to [our news](https://telegram.me/RandTalk). You're welcome to "
-"inspect and improve [Rand Talk v. {1} source code](https://github.com/"
+"Subscribe to [our news](https://telegram.me/RandTalkChannel). You're welcome "
+"to inspect and improve [Rand Talk v. {1} source code](https://github.com/"
 "quasiyoke/RandTalkBot) or to [give us 5 stars](https://telegram.me/storebot?"
 "start=randtalkbot)."
 msgstr ""
@@ -216,10 +216,10 @@ msgstr ""
 "Si tienes sugerencias o necesitas ayuda incluso escribes al admin del bot, "
 "@quasiyoke. En el mensaje, por favor, incluyes este número: {0}.\n"
 "\n"
-"Suscríbete a [nuestras noticias (en)](https://telegram.me/RandTalk). Eres la "
-"bienvenida para controlar y mejorar [el código naciente del Rand Talk v. {1}]"
-"(https://github.com/quasiyoke/RandTalkBot) o [para darnos 5 estrellas]"
-"(https://telegram.me/storebot?start=randtalkbot)."
+"Suscríbete a [nuestras noticias (en)](https://telegram.me/RandTalkChannel). "
+"Eres la bienvenida para controlar y mejorar [el código naciente del Rand "
+"Talk v. {1}](https://github.com/quasiyoke/RandTalkBot) o [para darnos 5 "
+"estrellas](https://telegram.me/storebot?start=randtalkbot)."
 
 #: randtalkbot/stranger_handler.py:118
 msgid "Notifications about bonuses were muted for 1 hour"
