--- a/randtalkbot/locale/it/LC_MESSAGES/randtalkbot.po
+++ b/randtalkbot/locale/it/LC_MESSAGES/randtalkbot.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: randtalkbot\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-03-16 10:52+0300\n"
+"POT-Creation-Date: 2016-03-16 11:30+0300\n"
 "PO-Revision-Date: 2016-02-25 23:50+0100\n"
 "Last-Translator: Martin Ligabue <martinligabue@gmail.com>\n"
 "Language-Team: Italian\n"
@@ -199,8 +199,8 @@ msgid ""
 "If you have any suggestions or require help, please contact @quasiyoke. When "
 "asking questions, please provide this number: {0}.\n"
 "\n"
-"Subscribe to [our news](https://telegram.me/RandTalk). You're welcome to "
-"inspect and improve [Rand Talk v. {1} source code](https://github.com/"
+"Subscribe to [our news](https://telegram.me/RandTalkChannel). You're welcome "
+"to inspect and improve [Rand Talk v. {1} source code](https://github.com/"
 "quasiyoke/RandTalkBot) or to [give us 5 stars](https://telegram.me/storebot?"
 "start=randtalkbot)."
 msgstr ""
@@ -213,9 +213,9 @@ msgstr ""
 "Se hai suggerimenti o hai bisogno di aiuto scrivi pure all'admin (inglese) "
 "del bot, @quasiyoke. Nel messaggio, per favore, includi questo numero: {0}.\n"
 "\n"
-"Iscriviti alle [nostre notizie (en)](https://telegram.me/RandTalk). Sei il "
-"benvenuto per controllare e migliorare il [codice sorgente del Rand Talk v. "
-"{1}](https://github.com/quasiyoke/RandTalkBot) o [per darci 5 stelle]"
+"Iscriviti alle [nostre notizie (en)](https://telegram.me/RandTalkChannel). "
+"Sei il benvenuto per controllare e migliorare il [codice sorgente del Rand "
+"Talk v. {1}](https://github.com/quasiyoke/RandTalkBot) o [per darci 5 stelle]"
 "(https://telegram.me/storebot?start=randtalkbot)."
 
 #: randtalkbot/stranger_handler.py:118
