--- a/randtalkbot/locale/ru/LC_MESSAGES/randtalkbot.po
+++ b/randtalkbot/locale/ru/LC_MESSAGES/randtalkbot.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: randtalkbot\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-03-16 10:52+0300\n"
+"POT-Creation-Date: 2016-03-16 11:30+0300\n"
 "PO-Revision-Date: 2016-01-16 10:10+0300\n"
 "Last-Translator: Pyotr Ermishkin <quasiyoke@gmail.com>\n"
 "Language-Team: Russian\n"
@@ -199,8 +199,8 @@ msgid ""
 "If you have any suggestions or require help, please contact @quasiyoke. When "
 "asking questions, please provide this number: {0}.\n"
 "\n"
-"Subscribe to [our news](https://telegram.me/RandTalk). You're welcome to "
-"inspect and improve [Rand Talk v. {1} source code](https://github.com/"
+"Subscribe to [our news](https://telegram.me/RandTalkChannel). You're welcome "
+"to inspect and improve [Rand Talk v. {1} source code](https://github.com/"
 "quasiyoke/RandTalkBot) or to [give us 5 stars](https://telegram.me/storebot?"
 "start=randtalkbot)."
 msgstr ""
@@ -213,10 +213,10 @@ msgstr ""
 "С предложением по боту или за справкой вы можете обратиться к @quasiyoke. "
 "Задавая вопрос, сообщите пожалуйста это число: {0}.\n"
 "\n"
-"Подписывайтесь на [наши новости (en)](https://telegram.me/RandTalk). Мы "
-"будем рады вашим дополнениям и замечаниям к [исходным кодам Rand Talk v. {1}]"
-"(https://github.com/quasiyoke/RandTalkBot) или если вы [дадите нам 5 звезд]"
-"(https://telegram.me/storebot?start=randtalkbot)."
+"Подписывайтесь на [наши новости (en)](https://telegram.me/RandTalkChannel). "
+"Мы будем рады вашим дополнениям и замечаниям к [исходным кодам Rand Talk v. "
+"{1}](https://github.com/quasiyoke/RandTalkBot) или если вы [дадите нам 5 "
+"звезд](https://telegram.me/storebot?start=randtalkbot)."
 
 #: randtalkbot/stranger_handler.py:118
 msgid "Notifications about bonuses were muted for 1 hour"
