--- a/randtalkbot/locale/en/LC_MESSAGES/randtalkbot.po
+++ b/randtalkbot/locale/en/LC_MESSAGES/randtalkbot.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: randtalkbot\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-03-16 10:52+0300\n"
+"POT-Creation-Date: 2016-03-16 11:30+0300\n"
 "PO-Revision-Date: 2016-01-16 10:10+0300\n"
 "Last-Translator: Pyotr Ermishkin <quasiyoke@gmail.com>\n"
 "Language-Team: English\n"
@@ -198,8 +198,8 @@ msgid ""
 "If you have any suggestions or require help, please contact @quasiyoke. When "
 "asking questions, please provide this number: {0}.\n"
 "\n"
-"Subscribe to [our news](https://telegram.me/RandTalk). You're welcome to "
-"inspect and improve [Rand Talk v. {1} source code](https://github.com/"
+"Subscribe to [our news](https://telegram.me/RandTalkChannel). You're welcome "
+"to inspect and improve [Rand Talk v. {1} source code](https://github.com/"
 "quasiyoke/RandTalkBot) or to [give us 5 stars](https://telegram.me/storebot?"
 "start=randtalkbot)."
 msgstr ""
@@ -212,8 +212,8 @@ msgstr ""
 "If you have any suggestions or require help, please contact @quasiyoke. When "
 "asking questions, please provide this number: {0}.\n"
 "\n"
-"Subscribe to [our news](https://telegram.me/RandTalk). You're welcome to "
-"inspect and improve [Rand Talk v. {1} source code](https://github.com/"
+"Subscribe to [our news](https://telegram.me/RandTalkChannel). You're welcome "
+"to inspect and improve [Rand Talk v. {1} source code](https://github.com/"
 "quasiyoke/RandTalkBot) or to [give us 5 stars](https://telegram.me/storebot?"
 "start=randtalkbot)."
 
