--- a/randtalkbot/locale/de/LC_MESSAGES/randtalkbot.po
+++ b/randtalkbot/locale/de/LC_MESSAGES/randtalkbot.po
@@ -9,41 +9,41 @@ msgstr ""
 "Project-Id-Version: randtalkbot\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-18 05:06+0300\n"
-"PO-Revision-Date: 2016-02-25 23:50+0100\n"
-"Last-Translator: Martin Ligabue <martinligabue@gmail.com>\n"
-"Language-Team: Italian\n"
-"Language: it\n"
+"PO-Revision-Date: 2016-01-16 10:10+0300\n"
+"Last-Translator: Jonas Zohren <jfowl@wjclub.tk>\n"
+"Language-Team: German\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: randtalkbot/stranger.py:29
 msgid "Female"
-msgstr "Femmina"
+msgstr "Weiblich"
 
 #: randtalkbot/stranger.py:30
 msgid "Male"
-msgstr "Maschio"
+msgstr "Männlich"
 
 #: randtalkbot/stranger.py:31
 msgid "Not specified"
-msgstr "Non specificato"
+msgstr "Nicht angegeben"
 
 #: randtalkbot/stranger.py:35
 msgid "boy"
-msgstr "ragazzo"
+msgstr "Junge"
 
 #: randtalkbot/stranger.py:36
 msgid "man"
-msgstr "uomo"
+msgstr "Mann"
 
 #: randtalkbot/stranger.py:39
 msgid "girl"
-msgstr "ragazza"
+msgstr "Mädchen"
 
 #: randtalkbot/stranger.py:40
 msgid "woman"
-msgstr "donna"
+msgstr "Frau"
 
 #: randtalkbot/stranger.py:111
 #, python-brace-format
@@ -55,12 +55,13 @@ msgid ""
 "every invited female and {2} bonus for each male (the more bonuses you have "
 "-- the faster partner's search will be):"
 msgstr ""
-"La ricerca è in corso. {0} utenti sono alla ricerca di partner — puoi "
-"modificare le preferenze (lingue, il sesso del partner) utilizzando /setup "
-"per parlare con loro.\n"
-"*Mancano ragazze* con cui chattare! Se invii il link ai tuoi amici "
-"guadagnerai {1} bonus per ogni ragazza invitata e {2} bonus per ogni ragazzo "
-"(più bonus si hanno → più sarà veloce la ricerca del partner):"
+"Es wird noch ein Partner für dich gesucht.\n"
+" {0} Benutzer warten auf einen Gesprächspartner — ändere deine Einstellungen "
+"(Sprache, Geschlecht des Partners) mit /setup um mit ihnen zu schreiben\n"
+"Zurzeit gibt es *wenig Frauen / Mädchen* Sende den Link an deine Freunde und "
+"bekomme im Gegenzug {1} Bonus-Punkte für jedes eingeladene weibliche "
+"Mitglied und {2} Bonus-Punkte für jedes männliche Mitglied. (Je mehr Bonus-"
+"Punkte du hast, je schneller wirst du mit einem neuen Partner verbunden):"
 
 #: randtalkbot/stranger.py:117
 #, python-brace-format
@@ -72,12 +73,13 @@ msgid ""
 "every invited male and {2} bonus for each female (the more bonuses you have "
 "-- the faster partner's search will be):"
 msgstr ""
-"La ricerca è in corso. {0} utenti sono alla ricerca di partner — puoi "
-"modificare le preferenze (lingue, il sesso del partner) utilizzando /setup "
-"per parlare con loro.\n"
-"*Mancano ragazzi* con cui chattare! Se invii il link ai tuoi amici "
-"guadagnerai {1} bonus per ogni ragazza invitata e {2} bonus per ogni ragazzo "
-"(più bonus si hanno → più sarà veloce la ricerca del partner):"
+"Es wird noch ein Partner für dich gesucht.\n"
+" {0} Benutzer warten auf einen Gesprächspartner — ändere deine Einstellungen "
+"(Sprache, Geschlecht des Partners) mit /setup um mit ihnen zu schreiben\n"
+"Zurzeit gibt es *wenig Männer / Jungen* Sende den Link an deine Freunde und "
+"bekomme im Gegenzug {1} Bonus-Punkte für jedes eingeladene männliche "
+"Mitglied und {2} Bonus-Punkte für jedes weibliche Mitglied. (Je mehr Bonus-"
+"Punkte du hast, je schneller wirst du mit einem neuen Partner verbunden):"
 
 #: randtalkbot/stranger.py:132 randtalkbot/stranger_handler.py:199
 #, python-brace-format
@@ -86,14 +88,14 @@ msgid ""
 "want to have some fun? Rand Talk will help you! It's a bot matching you with "
 "a random stranger of desired sex speaking on your language. {0}"
 msgstr ""
-"Vuoi[ ](http://randtalk.ml/static/img/logo-125x125.png) parlare con "
-"qualcuno, esercitarti in altre lingue o vuoi soltanto divertirti? Rand Talk "
-"fa al caso tuo! Verrete abbinati con una persona del sesso scelto da voi "
-"nella lingua che desiderate. [Prova!]({0})"
+"Möchtest[ ](http://randtalk.ml/static/img/logo-125x125.png) du mit jemanden "
+"reden, eine fremde Sprache lernen oder einfach nur Spaß haben? Rand Talk "
+"hilft dir dabei! Der Bot verbindet dich anonym mit einer zufälligen Person "
+"des gewünschten Geschlechts / Sprache. [Probier's aus]({0})"
 
 #: randtalkbot/stranger.py:150
 msgid "Looking for partner was stopped."
-msgstr "Ricerca partner per la chat interrotta"
+msgstr "Suche wurde abgebrochen"
 
 #: randtalkbot/stranger.py:238
 #, python-brace-format
@@ -103,10 +105,10 @@ msgid ""
 "Congratulations!\n"
 "To mute this notifications, use /mute\\_bonuses."
 msgstr ""
-"Hai ricevuto un bonus per aver invitato una persona al bot. I bonus vi "
-"aiuteranno a trovare partner più velocemente. Conteggio totale dei bonus: "
-"{0}. Congratulazioni! 🤑\n"
-"Per fermare le notifiche, fai /mute\\_bonuses."
+"Du hast einen Bonus-Punkt für das einladen einer Person bekommen. Bonus-"
+"Punkte helfen dir schneller einem neuen Partner zugewiesen zu werden. Deine "
+"Bonus-Punkte: {0}. Herzlichen Glückwunsch! 🤑\n"
+"Um diese Benachrichtigung auszuschalten, benutze /mute\\_bonuses."
 
 #: randtalkbot/stranger.py:247
 #, python-brace-format
@@ -116,58 +118,61 @@ msgid ""
 "Congratulations!\n"
 "To mute this notifications, use /mute\\_bonuses."
 msgstr ""
-"Hai ricevuto {0} bonus per aver invitato una persona al bot. I bonus vi "
-"aiuteranno a trovare partner più velocemente. Conteggio totale dei bonus: "
-"{1}. Congratulazioni! 🤑\n"
-"Per disattivare queste notifiche, usare il /mute\\_bonuses."
+"Du hast {0} Bonus-Punkte für das einladen einer Person bekommen. Bonus-"
+"Punkte helfen dir schneller einem neuen Partner zugewiesen zu werden. Deine "
+"Bonus-Punkte: {1}. Herzlichen Glückwunsch! 🤑\n"
+"Um diese Benachrichtigung auszuschalten, benutze /mute\\_bonuses."
 
 #: randtalkbot/stranger.py:267
 msgid "Chat was finished."
-msgstr "Chat chiusa."
+msgstr "Unterhaltung beendet."
 
 #: randtalkbot/stranger.py:269
 msgid "Your partner has left chat."
-msgstr "L'altra persona ha lasciato la chat. 😿"
+msgstr "Dein Partner hat die Unterhaltung verlassen. 😿"
 
 #: randtalkbot/stranger.py:274
 #, python-brace-format
 msgid "You've used one bonus. {0} bonus(es) left."
-msgstr "Hai usato un bonus. {0} bonus rimasti."
+msgstr "Du hast einen Bonus-Punkt benutzt. {0} Punkt(e) übrig."
 
 #: randtalkbot/stranger.py:278
 msgid "You've used your last bonus."
-msgstr "Hai usato il tuo ultimo bonus."
+msgstr "Du hast deinen letzten Bonus-Punkt verbraucht."
 
 #: randtalkbot/stranger.py:281
 msgid "Feel free to /begin a new talk."
-msgstr "Premi /begin per iniziarne un'altra!"
+msgstr "Benutze /begin um einen neuen Partner zu finden."
 
 #: randtalkbot/stranger.py:305
 #, python-brace-format
 msgid "Use {0} please."
-msgstr "Parla {0} per favore."
+msgstr "Bitte {0} benutzen."
 
 #: randtalkbot/stranger.py:309
 #, python-brace-format
 msgid "You can use the following languages: {0}."
-msgstr "Si possono selezionare le seguenti lingue: {0}."
+msgstr ""
+"Du kannst dich in folgenden Sprachen mit deinem Partner unterhalten: {0}."
 
 #: randtalkbot/stranger.py:316
 msgid "Your partner is here."
-msgstr "Il vostro partner è qui."
+msgstr "Dein Partner ist da."
 
 #: randtalkbot/stranger.py:322
 #, python-brace-format
 msgid "You've used one bonus with previous partner. {0} bonus(es) left."
-msgstr "Hai usato un bonus con il partner precedente. {0} bonus rimasti."
+msgstr ""
+"Du hast einen Bonus-Punkt für den letzten Partner verbraucht. {0} Punkt(e) "
+"übrig."
 
 #: randtalkbot/stranger.py:325
 msgid "You've used your last bonus with previous partner."
-msgstr "Hai usato il tuo ultimo bonus con il partner precedente."
+msgstr "Du hast deinen letzten Bonus-Punkt mit dem letzten Partner verbraucht."
 
 #: randtalkbot/stranger.py:327
 msgid "Here's another stranger."
-msgstr "Ho trovato un'altra persona."
+msgstr "Hier ist ein anderer Partner."
 
 #: randtalkbot/stranger.py:338
 #, python-brace-format
@@ -175,8 +180,8 @@ msgid ""
 "Your partner's been looking for you for {0} hr. Say him \"Hello\" -- if he "
 "doesn't respond to you, launch search again by /begin command."
 msgstr ""
-"Il vostro partner vi sta cercando da {0} ore. Digli “Ciao” — se non vi "
-"risponde, fate una nuova ricerca utilizzando il comando /begin."
+"Dein Partner hat seit {0} Stunde(n) auf dich gewartet. Sprich ihn an, sollte "
+"er nicht antworten, suche mit /begin einen neuen."
 
 #: randtalkbot/stranger.py:343
 #, python-brace-format
@@ -184,16 +189,16 @@ msgid ""
 "Your partner's been looking for you for {0} min. Say him \"Hello\" -- if he "
 "doesn't respond to you, launch search again by /begin command."
 msgstr ""
-"Il vostro partner vi sta cercando da {0} min. Digli “Ciao” — se non vi "
-"risponde, fate una nuova ricerca utilizzando il comando /begin."
+"Dein Partner hat seit {0} Minute(n) auf dich gewartet. Sprich ihn an, sollte "
+"er nicht antworten, suche mit /begin einen neuen."
 
 #: randtalkbot/stranger.py:349
 msgid "Have a nice chat!"
-msgstr "Divertiti 🤗"
+msgstr "Viel Spaß beim reden! 🤗"
 
 #: randtalkbot/stranger.py:445
 msgid "Looking for a stranger for you."
-msgstr "Ricerca partner per la chat in corso. 🤔"
+msgstr "Suche nach einem neuen Gesprächspartner für dich 🤔"
 
 #: randtalkbot/stranger_handler.py:86
 #, python-brace-format
@@ -212,31 +217,32 @@ msgid ""
 "quasiyoke/RandTalkBot) or to [give us 5 stars](https://telegram.me/storebot?"
 "start=randtalkbot)."
 msgstr ""
-"*Aiuto*\n"
+"*Hilfe*\n"
 "\n"
-"Digitare o premere /begin per cercare una persona con cui iniziare la chat; "
-"se vuoi cambiare persona, chiudi la chat usando /end e cerca un'altra "
-"persona. Per modificare le impostazioni puoi utilizzare /setup.\n"
+"Mit /begin startest du die Suche nach einem Gesprächspartner. Nachdem du "
+"verbunden wurdest, kannst du /end benutzen um die Konservation zu beenden. "
+"Um deine Einstellungen zu ändern, benutze /setup.\n"
 "\n"
-"Se hai suggerimenti o hai bisogno di aiuto scrivi pure all'admin (inglese) "
-"del bot, @quasiyoke. Nel messaggio, per favore, includi questo numero: {0}.\n"
+"Wenn du Vorschläge, Kritik oder Fragen hast, kontaktiere @quasiyoke (EN). "
+"Bei Fragen bitte diese Nummer angeben: {0}.\n"
 "\n"
-"Iscriviti alle [nostre notizie (en)](https://telegram.me/RandTalk). Sei il "
-"benvenuto per controllare e migliorare il [codice sorgente del Rand Talk v. "
-"{1}](https://github.com/quasiyoke/RandTalkBot) o [per darci 5 stelle]"
-"(https://telegram.me/storebot?start=randtalkbot)."
+"Abonniere unseren [News-Channel (EN)](https://telegram.me/RandTalk). Den "
+"Quellcode findest du hier [Rand Talk v. {1} Quellcode](https://github.com/"
+"quasiyoke/RandTalkBot) oder [bewerte uns mit 5 Sternen](https://telegram.me/"
+"storebot?start=randtalkbot)."
 
 #: randtalkbot/stranger_handler.py:107
 msgid "Notifications about bonuses were muted for 1 hour"
-msgstr "Le notifiche bonus sono stati disattivati per 1 ora 🤐"
+msgstr "Bonus-Punkt Benachrichtigungen wurden für 1 Stunde stumm geschaltet 🤐"
 
 #: randtalkbot/stranger_handler.py:133
 msgid ""
 "Don't try to fool me. Forward message with the link to your friends and "
 "receive well-earned bonuses that will help you to find partner quickly."
 msgstr ""
-"Non cercare di ingannarmi. 😉 Inoltra questo messaggio ai tuoi amici e "
-"riceverai un bonus che ti aiuterà a trovare un partner più in fretta."
+"Netter Versuch. 😉 Leite die Nachricht mit dem Link an deine Freunde weiter "
+"und erhalte redlich verdiente Bonus-Punkte, die deine Partnersuche "
+"beschleunigen."
 
 #: randtalkbot/stranger_handler.py:146
 msgid ""
@@ -245,56 +251,63 @@ msgid ""
 "Use /begin to start looking for a conversational partner, once you're "
 "matched you can use /end to end the conversation."
 msgstr ""
-"*Comandi*\n"
+"*Manual*\n"
 "\n"
-"Premi (o scrivi) /begin per cercare una persona con cui iniziare la chat; se "
-"vuoi terminare la conversazione premi /end e cerca un'altra persona."
+"Benutze /begin um anonym mit einem zufälligen Gesprächspartner verbunden zu "
+"werden, nachdem du verbunden wurdest kannst du mit /end die Unterhaltung "
+"beenden."
 
 #: randtalkbot/stranger_handler.py:159 randtalkbot/stranger_handler.py:177
 msgid "Messages of this type aren't supported."
-msgstr "Mi dispiace, il bot non supporta messaggi di questo tipo  😞"
+msgstr "Diese Art von Nachrichten werden zur Zeit nicht unterstützt. 😞"
 
 #: randtalkbot/stranger_handler.py:169
 msgid "Unknown command. Look /help for the full list of commands."
-msgstr "Comando sconosciuto. Premi /help per la lista di tutti i comandi."
+msgstr "Unbekannter Befehl. Unter /help findest du alle gültigen Befehle."
 
 #: randtalkbot/stranger_handler.py:185
 msgid "Your partner has blocked me! How did you do that?!"
-msgstr "L'altra persona mi ha bloccato. Come hai osato farlo?! 😕"
+msgstr "Dein Partner hat *mich* blockiert! Wie hast du das denn geschaft?! 😕"
 
 #: randtalkbot/stranger_handler.py:195
 msgid "Rand Talk Invitation Link"
-msgstr "Link di invito per Rand Talk"
+msgstr "Rand Talk Einladungs Link"
 
 #: randtalkbot/stranger_handler.py:196
 msgid "The more friends'll use your link -- the faster the search will be"
 msgstr ""
-"Più amici utilizzeranno il tuo link — più veloce sarà la ricerca su Rand Talk"
+"Je mehr Freunde deinen Link benutzen, desto schneller ist deine Partner-Suche"
 
 #: randtalkbot/stranger_setup_wizard.py:50
 msgid ""
 "Thank you. Use /begin to start looking for a conversational partner, once "
 "you're matched you can use /end to end the conversation."
 msgstr ""
-"Grazie mille! 😋 Premi (o scrivi) /begin per cercare una persona con cui "
-"iniziare la chat; se vuoi cambiare persona, chiudi la chat premendo o "
-"scrivendo /end e cerca un'altra persona."
+"Vielen Dank. 😋 Benutze /begin um anonym mit einem zufälligen "
+"Gesprächspartner verbunden zu werden, nachdem du verbunden wurdest kannst du "
+"mit /end die Unterhaltung beenden."
 
 #: randtalkbot/stranger_setup_wizard.py:76
 msgid "Please specify at least one language."
-msgstr "Per favore scegli almeno una lingua."
+msgstr ""
+"Bitte gib mindestens eine Sprache an\n"
+"\n"
+"Please specify at least one language"
 
 #: randtalkbot/stranger_setup_wizard.py:80
 #, python-brace-format
 msgid "Language \"{0}\" wasn't found."
-msgstr "Lingua non trovata “{0}”. 😳 "
+msgstr ""
+"Die Sprache “{0}” wurde nicht gefunden. 😳 Benutze im Zweifelsfall "
+"”English”.\n"
+"\n"
+"Language “{0}” wasn't found. Try to specify language in English."
 
 #: randtalkbot/stranger_setup_wizard.py:84
 msgid ""
 "Too much languages were specified. Please shorten your list to 6 languages."
 msgstr ""
-"Troppe lingue sono state selezionare. Per favore riduci l'elenco fino a un "
-"massimo di 6 lingue.\n"
+"Zu viele Sprachen angegeben. Bitte kürze deine Liste auf 6 Sprachen\n"
 "\n"
 "Too much languages were specified. Please shorten your list to 6 languages."
 
@@ -302,11 +315,13 @@ msgstr ""
 #: randtalkbot/stranger_setup_wizard.py:116
 #, python-brace-format
 msgid "Unknown sex: \"{0}\" -- is not a valid sex name."
-msgstr "Sesso sconosciuto: “{0}”. Controlla l'ortografia!"
+msgstr ""
+"Unbekanntes Geschlecht: “{0}” — kenne ich nicht. Sicher dass du dich nicht "
+"vertan hast? 😉"
 
 #: randtalkbot/stranger_setup_wizard.py:147
 msgid "Finish setup process please. After that you can start using bot."
-msgstr "Completa il profilo prima di iniziare ad usare il bot. Grazie"
+msgstr "Fertig Setup-Prozess bitte. Danach können Sie mit Bot starten."
 
 #: randtalkbot/stranger_setup_wizard.py:168
 msgid ""
@@ -314,12 +329,17 @@ msgid ""
 "descending order of your speaking convenience or just pick one at special "
 "keyboard."
 msgstr ""
-"Scrivi quali lingue parli in questo modo: “English, Italian” — nell'ordine "
-"in cui ti interessano di più o scegline una dalla tastiera del bot."
+"Liste die Sprachen die du sprichst so auf: “English, Italian” — (in "
+"absteigender Reinfolge deiner Sprachsicherheit) oder wähle eine aus dem "
+"Spezial-Keyboard unten.\n"
+"\n"
+"Enumerate the languages you speak like this: “English, Italian” — in "
+"descending order of your speaking convenience or just pick one at special "
+"keyboard."
 
 #: randtalkbot/stranger_setup_wizard.py:173
 msgid "Leave the language unchanged"
-msgstr "Non cambiare la lingua"
+msgstr "Sprachen nicht ändern"
 
 #: randtalkbot/stranger_setup_wizard.py:174
 #, python-brace-format
@@ -328,13 +348,17 @@ msgid ""
 "\"English, Italian\" -- in descending order of your speaking convenience or "
 "just pick one at special keyboard."
 msgstr ""
-"La tua lingua attuale è {0}. Scrivi quali lingue parli in questo modo: "
-"“English, Italian” — nell'ordine in cui ti interessano di più o scegline una "
-"dalla tastiera del bot."
+"Deine jetzige Sprache ist {0}. Liste die Sprachen die du sprichst so auf: "
+"“English, Italian” — (in absteigender Reinfolge deiner Sprachsicherheit) "
+"oder wähle eine aus dem Spezial-Keyboard unten.\n"
+"\n"
+"Your current language is {0}. Enumerate the languages you speak like this: "
+"“English, Italian” — in descending order of your speaking convenience or "
+"just pick one at special keyboard."
 
 #: randtalkbot/stranger_setup_wizard.py:178
 msgid "Leave the languages unchanged"
-msgstr "Non cambiare le lingue"
+msgstr "Sprachen nicht ändern"
 
 #: randtalkbot/stranger_setup_wizard.py:179
 #, python-brace-format
@@ -343,18 +367,22 @@ msgid ""
 "way -- in descending order of your speaking convenience or just pick one at "
 "special keyboard."
 msgstr ""
-"Le tue lingue attuali sono {0}. Scrivi quali lingue parli in questo modo: "
-"“English, Italian” — nell'ordine in cui ti interessano di più o scegline una "
-"dalla tastiera del bot."
+"Deine jetzige Sprachen sind {0}. Liste die Sprachen die du sprichst in "
+"gleicher Weise auf — (in absteigender Reinfolge deiner Sprachsicherheit) "
+"oder wähle eine aus dem Spezial-Keyboard unten.\n"
+"\n"
+"Your current languages are: {0}. Enumerate the languages you speak the same "
+"way, in descending order of your speaking convenience or just pick one at "
+"special keyboard."
 
 #: randtalkbot/stranger_setup_wizard.py:191
 msgid ""
 "Set up your sex. If you pick \"Not Specified\" you can't choose your "
 "partner's sex."
 msgstr ""
-"Seleziona il tuo sesso. Se scegli \"Non specificato\" non potrai sceglier il "
-"sesso del tuo partner della chat."
+"Gib dein Geschlecht an. Wenn du “nicht angegeben” auswählst, kannst du auch "
+"nicht  auswählen, was für ein Geschlecht dein Gesprächspartner haben soll."
 
 #: randtalkbot/stranger_setup_wizard.py:197
 msgid "Choose your partner's sex"
-msgstr "Scegli il sesso del tuo partner della chat"
+msgstr "Wähle das gewünschte Geschlecht deines Gesprächspartners aus"
